--- a/homepage.html
+++ b/homepage.html
@@ -7,12 +7,23 @@
 </head>
 
 <body>
+  <ul id="navbar">
+    <li style="opacity: .55">Nathan</li>
+    <li><a href="https://gmail.com">Gmail</a></li>
+    <li><a href="https://google.com/images">Images</a></li>
+    <li><a id="apps" title="Google apps"></a></li>
+    <li><div id="bell"><a id="notifications" title="Google notifications"></a></div></li>
+    <li><a id="account" title="Google account: ___ (___@gmail.com)"></a></li>
+  </ul>
+
   <div id="logo">
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt = "Welcome to Google">
   </div>
   <div id="searchform">
     <form action="#" method="POST" name="search">
-      <input id="inputfield" type="text" name="searchbox"><br>
+      <div id="textbox">
+        <input id="inputfield" type="text" name="searchbox"><br>
+      </div>
       <input class="button" type="submit" name="Google Search" value="Google Search">
       <input class="button" type="submit" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
   </div>
