--- a/homepage.html
+++ b/homepage.html
@@ -27,6 +27,18 @@
       <input class="button" type="submit" name="Google Search" value="Google Search">
       <input class="button" type="submit" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
   </div>
+  <div id="footer">
+    <span id="fleft">
+      <a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a>
+      <a href="https://www.google.com/services/?fg=1">Business</a>
+      <a href="https://www.google.com/intl/en/about.html?fg=1">About</a>
+    </span>
+    <span id="blankspace"></span>
+    <span id="fright">
+      <a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a>
+      <a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a>
+      <a href="https://www.google.com/preferences?hl=en">Settings</a>
+    </span>
 </body>
 
 </html>
