--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
   <ul id="navbar">
     <li style="opacity: .55">Nathan</li>
     <li><a href="https://gmail.com">Gmail</a></li>
-    <li><a href="https://google.com/images">Images</a></li>
+    <li><a href="https://images.google.com">Images</a></li>
     <li><a id="apps" title="Google apps"></a></li>
     <li><div id="bell"><a id="notifications" title="Google notifications"></a></div></li>
     <li><a id="account" title="Google account: ___ (___@gmail.com)"></a></li>
