Navbar button fixes

--- a/homepage.html
+++ b/homepage.html
@@ -12,10 +12,9 @@
     <li><a href="https://gmail.com">Gmail</a></li>
     <li><a href="https://images.google.com">Images</a></li>
     <li><a id="apps" title="Google apps"></a></li>
-    <li><div id="bell"><a id="notifications" title="Google notifications"></a></div></li>
+    <li><div style="padding-right: 8px"><div id="bell"><a id="notifications" title="Google notifications"></a></div></div></li>
     <li><a id="account" title="Google account: ___ (___@gmail.com)"></a></li>
   </ul>
-
   <div id="logo">
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt = "Welcome to Google">
   </div>
